--- a/.github/workflows/azure-pipeline.yml
+++ b/.github/workflows/azure-pipeline.yml
@@ -27,11 +27,11 @@ jobs:
     - name: Train Model
       run: python train.py
 
-    - name: Show Azure Account
-      run: az account show
-    
-    - name: List Subscriptions
-      run: az account list --output table
+    - name: Debug Azure environment
+      run: |
+        echo "AZURE_CLIENT_ID=$AZURE_CLIENT_ID"
+        echo "AZURE_TENANT_ID=$AZURE_TENANT_ID"
+        echo "AZURE_SUBSCRIPTION_ID=$AZURE_SUBSCRIPTION_ID"
 
     - name: Deploy Model
       run: python deploy.py
