--- a/.github/workflows/azure-ml-cicd.yml
+++ b/.github/workflows/azure-ml-cicd.yml
@@ -39,3 +39,7 @@ jobs:
       - name: Deploy Model
         run: |
           python deploy.py
+        env:
+          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          AZURE_RESOURCE_GROUP: ${{ secrets.AZURE_RESOURCE_GROUP }}
+          AZURE_WORKSPACE_NAME: ${{ secrets.AZURE_WORKSPACE_NAME }}
